--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Rakha2121/cap-wa"
+    "url": "git+https://github.com/Rakha21/cap-sa"
   },
   "keywords": [
     "k"
@@ -42,7 +42,7 @@
   "author": "RakhA MhdZ",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Rakha2121/cap-wa/issues"
+    "url": "https://github.com/Rakha21/cap-sa/issues"
   },
-  "homepage": "https://github.com/Rakha2121/cap-wa#readme"
+  "homepage": "https://github.com/Rakha21/cap-sa#readme"
 }
